Update ChessGame